<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a101078710.assignment_1_youquanliu_101078710.Home"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="10">


    <TextView
        android:id="@+id/textViewTwitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="142dp"
        android:layout_marginStart="129dp"

        android:layout_marginLeft="129dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:text="Data here" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnGeneralSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_general_schedule" />

        <Button
            android:id="@+id/btnMySchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_my_schedule" />

        <Button
            android:id="@+id/btnSpeakers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_speakers" />

        <Button
            android:id="@+id/btnSponsors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sponsors" />

        <Button
            android:id="@+id/btnAttendees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_attendees" />

        <Button
            android:id="@+id/btnMaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_maps" />
    </LinearLayout>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!--<Button-->
            <!--android:id="@+id/btnGeneralSchedule"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="fill"-->
            <!--android:text="@string/btn_general_schedule"-->
            <!--android:textIsSelectable="false"-->
            <!--app:layout_column="0"-->
            <!--app:layout_columnWeight="1"-->

            <!--app:layout_row="0"-->
            <!--app:layout_rowWeight="1" />-->

        <!--<Button-->
            <!--android:id="@+id/btnMySchedule"-->
            <!--android:layout_width="157dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="fill"-->
            <!--android:text="@string/btn_my_schedule"-->
            <!--app:layout_column="1"-->
            <!--app:layout_columnWeight="1"-->
            <!--app:layout_row="0"-->
            <!--app:layout_rowWeight="1" />-->

        <!--<Button-->
            <!--android:id="@+id/btnSpeakers"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="fill"-->
            <!--android:text="@string/btn_speakers"-->
            <!--app:layout_column="0"-->
            <!--app:layout_columnWeight="1"-->
            <!--app:layout_row="1"-->
            <!--app:layout_rowWeight="1" />-->

        <!--<Button-->
            <!--android:id="@+id/btnSponsors"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="fill"-->
            <!--android:text="@string/btn_sponsors"-->
            <!--app:layout_column="1"-->
            <!--app:layout_columnWeight="1"-->
            <!--app:layout_row="1"-->
            <!--app:layout_rowWeight="1" />-->

        <!--<Button-->
            <!--android:id="@+id/btnAttendees"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="fill"-->
            <!--android:text="@string/btn_attendees"-->
            <!--app:layout_column="0"-->
            <!--app:layout_columnWeight="1"-->
            <!--app:layout_row="2"-->
            <!--app:layout_rowWeight="1" />-->

        <!--<Button-->
            <!--android:id="@+id/btnMaps"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="fill"-->
            <!--android:text="@string/btn_maps"-->
            <!--app:layout_column="1"-->
            <!--app:layout_columnWeight="1"-->
            <!--app:layout_row="2"-->
            <!--app:layout_rowWeight="1" />-->

    </android.support.v7.widget.GridLayout>


</LinearLayout>